[package]
name = "ax6"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = "0.3.19"
anyhow = "1.0.95"
dotenv = "0.15.0"
ipnetwork = "0.21.1"
rig-core = "0.6.1"
serde_json = "1.0.137"
thiserror = "2.0.11"
